--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,22 @@
     --cor-de-fundo: #00030c;
 }
 
+body {
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
-body {
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
+.principal {
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.container {
+    height: 100vh;
 }
