--- a/styles.css
+++ b/styles.css
@@ -116,15 +116,24 @@ body {
     color: var(--branco-principal);
 }
 
-.footer {
+.rodape {
     text-align: center;
+    margin: 5em 3em;
 }
 
-.footer-container {
+.rodape__lista {
     display: flex;
     justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
 }
-/*
-.footer-container__item {
-    justify-content: space-between;
-}*/
+
+.rodape__logo {
+    margin-bottom: 2em;
+}
+
+.rodape__texto {
+    color: var(--cinza-secundario);
+    font-size: 14px;
+    margin: 1em 0;
+}
